home-automation/manifests/home-assistant/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-automation
spec:
  selector:
    app: home-assistant

  ports:
    - name: http
      port: 8123
      targetPort: http
      protocol: TCP
