home-automation/manifests/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: home-automation
  annotations:
    gethomepage.dev/enabled: "true"
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    gethomepage.dev/name: Home Assistant
    gethomepage.dev/description: Home automation
    gethomepage.dev/group: Home Automation
    gethomepage.dev/icon: home-assistant.png
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  ingressClassName: traefik

  rules:
    - host: home-assistant.k8s.internal.smigorx.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  name: http
  tls:
    - hosts:
        - home-assistant.k8s.internal.smigorx.eu
      secretName: home-assistant-tls
